# 8051-weight-firmware

./: CMakeLists.txt  reademe.md
programmer/PC-site_Driver/SHA-1/: ispicp.cat
programmer/PC-site_Driver/SHA-2/: 0E6A030D_8051ISPICP_v3.02.inf  ispicp.cat
src/: -dumpmachine.LST  .eide.usr.ctx.json  MEMORY.SRC  MEMORY.asm  REG_MG82FG5Bxx.h  adc.c  adc.h  keypad.LST  keypad.c  keypad.h  keys.json  macro.h  memory.c  memory.h  om3  om3.LST  om3.M51  om3.build_log.htm  om3.c  om3.hex  om3.lnp  om3.plg  om3.uvgui.PC  om3.uvgui.Vardhamaan  om3.uvgui.aditya  om3.uvgui_Vardhamaan.bak  om3.uvopt  om3.uvproj  om3_uvopt.bak  settings.c  settings.h  src.code-workspace  tm1640.LST  tm1640.c  tm1640.h  utility.LST  utility.__i  utility.c  utility.h  weight.LST  (+2 more)
src/.eide/: eide.json  om3.8051.options.keil.json  target 1.8051.options.keil.json
